Setting up director detail activity

--- a/app/src/main/res/layout/activity_vote_director_detail.xml
+++ b/app/src/main/res/layout/activity_vote_director_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VoteMovieDetailActivity">
+    tools:context=".VoteDirectorDetailActivity">
 
     <ImageView
         android:id="@+id/directorImageDetail"
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Movie Title"
+        android:text="Director Name"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,27 +30,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/directorImageDetail" />
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/voteMovieDetailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Genre"
-        android:textSize="20sp"
-        android:textStyle="italic"
+        android:layout_marginTop="84dp"
+        android:text="Vote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/directorNameDetail" />
 
-    <Button
-        android:id="@+id/voteMovieDetailButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Vote"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
