Login working good

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/voteMovieButton"
+        android:icon="@drawable/movie_icon"
         android:title="Vote Movie"
         app:showAsAction="always" />
     <item
