--- a/app/src/main/res/layout/activity_vote_director_detail.xml
+++ b/app/src/main/res/layout/activity_vote_director_detail.xml
@@ -18,7 +18,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/directorNameDetail"
+        android:id="@+id/movieNameDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -39,6 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/directorNameDetail" />
+        app:layout_constraintTop_toBottomOf="@+id/movieNameDetail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
