--- a/app/src/main/res/layout/activity_vote_movie_detail.xml
+++ b/app/src/main/res/layout/activity_vote_movie_detail.xml
@@ -18,7 +18,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/directorNameDetail"
+        android:id="@+id/movieNameDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/directorImageDetail" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/movieGenreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -41,7 +41,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/directorNameDetail" />
+        app:layout_constraintTop_toBottomOf="@+id/movieNameDetail" />
 
     <Button
         android:id="@+id/voteMovieDetailButton"
@@ -52,5 +52,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/movieGenreText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
